fix: Add overflow:auto to EncounterDetails page to make the background fit when drawers are open

--- a/src/components/EncounterDetails/EncounterDetails.css
+++ b/src/components/EncounterDetails/EncounterDetails.css
@@ -1,3 +1,8 @@
+.EncounterDetails {
+  height: 100vh;
+  overflow: auto;
+}
+
 details, .damage-mods, .senses, .main-details, .foe-stats, .foe-physical, .foe-speeds, .base-box, .party-stats, .foe-proficiencies, .proficiencies {
   display: flex;
   box-sizing: border-box;
